Added easier way to get pid from process, cleaned up documentation

--- a/solr.conf
+++ b/solr.conf
@@ -1,9 +1,26 @@
-# Solr startup config file
+#-----------------------------------------------------
+# solr-initd v0.5.1
+#-----------------------------------------------------
+# Configuration for solr.init. Copy this to:
+#
+# /etc/solr.conf
+#
+# NOTE: if you are installing this somewhere else then
+# you need to alter solr.start and solr.initd. 
+#
+#-----------------------------------------------------
+# Author: Jeff Busby <jeff@jeffbusby.ca>
+# License: http://creativecommons.org/licenses/by/3.0/
+#-----------------------------------------------------
+
 # Directory where solr is installed
 SOLR_HOME=/var/lib/solr
 
 # Path to solr start script 
 SOLR_START=/var/lib/solr.start
+
+# Java options for Solr
+OPTIONS="-Xmx1024m"
 
 # Path to pid file
 PIDFILE=/var/run/solr.pid
